# optimize_tensorrt

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  __init__.py  calibrator.py  inference.py  onnx2trt.py  onnx2trt_handmade.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: push_pypi.yaml
src/optimize_tensorrt/: __about__.py  calibrator.py  inference.py  onnx2trt.py  onnx2trt_handmade.py  onnx_converter.py
src/optimize_tensorrt/deprecated/: inference_onnx_tensorrt.py
