[metadata]
name  =  Optimize-TensorRT
version  =  attr: optimize_tensorrt.__about__.__version__
url = https://github.com/riZZZhik/optimize_tensorrt
description_file = README.md
license_files = LICENSE
license = Apache
author = Dmitry Barsukov
author_email = rizzzhik@gmail.com
description = Optimize and Inference TensorRT Machine Learning models in Python
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = = src
include_package_data = True

[options.packages.find]
where = src